# MAC0352_EP2

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  dashboard.py  pyproject.toml  requirements.txt  run.py
include/: metrics.hpp  mib.hpp  server.hpp  utils.hpp
presentation/: presentation.tex
report/: report.tex
src/: agents.cpp  manager.cpp  metrics.cpp  mib.cpp  server.cpp  utils.cpp
